# rater

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
benches/: micro_benchmarks.rs  rate_limiter.rs
examples/: basic.rs  ip_limiting.rs
src/: lib.rs
src/rate_limiter/: config.rs  core.rs  manager.rs  metrics.rs  mod.rs  utils.rs
tests/: integration.rs
